fix(register): fix navbar shifted register and give us feedback

--- a/css/register.css
+++ b/css/register.css
@@ -39,7 +39,7 @@ body {
     color: #757575;
 }
 
-.register-btn {
+.register-button {
     text-decoration: none;
     text-align: center;
     padding : 5px;
